@@ -101,27 +101,6 @@
         handler=".metaconfigure.resourceDirectory"
         />
 
-
-    <!-- misc. directives -->
-
-    <meta:directive
-        name="layer"
-        schema="zope.app.publisher.browser.metadirectives.ILayerDirective"
-        handler="zope.app.publisher.browser.metaconfigure.layer"
-        />
-
-    <meta:directive
-        name="skin"
-        schema="zope.app.publisher.browser.metadirectives.ISkinDirective"
-        handler="zope.app.publisher.browser.metaconfigure.skin"
-        />
-
-    <meta:directive
-        name="defaultSkin"
-        schema="zope.app.publisher.browser.metadirectives.IDefaultSkinDirective"
-        handler="zope.app.publisher.browser.metaconfigure.defaultSkin"
-        />
-
   </meta:directives>
 
 </configure>
